# inti

./: Cargo.toml  README.md  inti.yaml
.github/workflows/: code-check.yml
src/: error.rs  lib.rs  main.rs  registry.rs  task.rs
src/modules/: apt.rs  command.rs  file.rs  mod.rs
src/tasks/: mod.rs
src/tasks/system/: command.rs  file.rs  mod.rs
tests/: cli.rs
