[package]
name = "inti"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.82"
chrono = "0.4.38"
clap = { version = "4.5.4", features = ["derive"] }
filetime = "0.2.25"
serde = { version = "1.0.197", features = ["derive"] }
serde_yaml = "0.9.34"
thiserror = "1.0.59"
tokio = { version = "1.37.0", features = ["full"] }

[dev-dependencies]
assert_cmd = "2.0.14"
tempfile = "3.10.1"
